Almost wrapped things up

--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -56,6 +56,17 @@
     "print(list(df.columns))\n",
     "#encoding y\n",
     "df['y'] = df['y'].map({'yes':1,'no':0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df.job.v"
    ]
   },
   {
@@ -82,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df.loc[df[\"pdays\"] == 999, \"pdayscat\"] = 'not_contacted' #cutomer was not contacted for previous campaign\n",
-    "df.loc[df[\"pdays\"] != 999, \"pdayscat\"] = 'contacted' #cutomer was contacted for previous campaign"
+    "df.loc[df[\"pdays\"] == 999, \"pdayscat\"] = 0 #cutomer was not contacted for previous campaign\n",
+    "df.loc[df[\"pdays\"] != 999, \"pdayscat\"] = 1 #cutomer was contacted for previous campaign"
    ]
   },
   {
@@ -101,20 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df.loc[df[\"age\"] <= 28, \"agecat\"] = 'young'\n",
-    "df.loc[((df[\"age\"] > 29) & (df[\"age\"] < 60)), \"agecat\"] = 'adult'\n",
-    "df.loc[df[\"age\"] >= 60, \"agecat\"] = 'senior'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -123,13 +121,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.45638874323\n",
-      "17.4573055028\n",
-      "39.564124057\n"
+      "10.2853117295\n",
+      "45.6391875747\n",
+      "28.0991735537\n"
      ]
     }
    ],
    "source": [
+    "l1 = 23\n",
+    "l2 = 62\n",
+    "df.loc[df[\"age\"] <= l1, \"agecat\"] = 'young'\n",
+    "df.loc[((df[\"age\"] > l1) & (df[\"age\"] < l2)), \"agecat\"] = 'adult'\n",
+    "df.loc[df[\"age\"] >= l2, \"agecat\"] = 'senior'\n",
+    "\n",
     "l = df.agecat.value_counts()\n",
     "a = l.index\n",
     "\n",
@@ -139,16 +143,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert Campaign into Categorical"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "567\n",
+      "11.3931217843\n",
+      "2.1164021164\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = 12\n",
+    "print (len(df.loc[df.campaign > l1]))\n",
+    "\n",
+    "df.loc[df[\"campaign\"] <= l1, \"campcat\"] = 'low'\n",
+    "df.loc[df[\"campaign\"] > l1, \"campcat\"] = 'high'\n",
+    "\n",
+    "l = df.campcat.value_counts()\n",
+    "a = l.index\n",
+    "\n",
+    "for i in a:\n",
+    "    n = df.y[df.campcat == i].sum() * 100 / l[i] #% subsription for each of the categories\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "numeric = ['age', 'campaign', 'pdays', 'previous', 'emp.var.rate', 'cons.price.idx', 'cons.conf.idx', \n",
-    "           'euribor3m', 'nr.employed',]\n",
-    "binary = ['default', 'housing', 'loan','contact','pdayscat']\n",
+    "           'euribor3m', 'nr.employed']\n",
+    "binary = ['default', 'housing', 'loan','contact','campcat']\n",
     "categorical = ['poutcome', 'job', 'marital', 'month','day_of_week','agecat']\n",
     "hierarchy = ['education']"
    ]
@@ -181,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -193,6 +236,14 @@
       "Column default - still contains 8597 unknowns\n",
       "Column housing - still contains 990 unknowns\n",
       "Column loan - still contains 990 unknowns\n",
+      "contact  -  0\n",
+      "campcat  -  0\n",
+      "poutcome  -  0\n",
+      "job  -  330\n",
+      "marital  -  71\n",
+      "month  -  0\n",
+      "day_of_week  -  0\n",
+      "agecat  -  0\n",
       "Column education - still contains 1596 unknowns\n"
      ]
     }
@@ -200,12 +251,14 @@
    "source": [
     "null_cols = []\n",
     "for column in binary+categorical+hierarchy:\n",
+    "    missing_count = len(df.loc[df[column] == 'unknown']['y'])\n",
     "    #Delete few unknowns\n",
-    "    if len(df.loc[df[column] == 'unknown']['y']) < 500:\n",
+    "    if missing_count < 500:\n",
+    "        print (column, \" - \", missing_count)\n",
     "        df = df[df[column] != 'unknown']\n",
-    "    elif len(df.loc[df[column] == 'unknown']['y']) > 500:\n",
+    "    elif missing_count > 500:\n",
     "        #Find which columns have still retained unkowns\n",
-    "        number = len(df.loc[df[column] == 'unknown']['y'])\n",
+    "        number = missing_count\n",
     "        print(\"Column {} - still contains {} unknowns\".format(column,number))\n",
     "        #Turn them into np.nan\n",
     "#         df.loc[df[column] == 'unknown',column] = np.nan\n",
@@ -278,18 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# for column in categorical:\n",
+    "for column in categorical:\n",
     "    \n",
-    "#     le = LabelEncoder()\n",
-    "#     df[column] = le.fit_transform(df[column])"
+    "    le = LabelEncoder()\n",
+    "    df[column] = le.fit_transform(df[column])"
    ]
   },
   {
@@ -301,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -399,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -415,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +479,7 @@
        "1596"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -569,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -728,7 +781,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 51 columns</p>\n",
+       "<p>5 rows × 52 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -760,10 +813,10 @@
        "4             1              0             0  \n",
        "6             1              0             0  \n",
        "\n",
-       "[5 rows x 51 columns]"
+       "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,13 +828,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df.to_csv(\"clean_data_basic_pdayscat_agecat.csv\",index=False)"
+    "df.to_csv(\"clean_data_52_features.csv\",index=False)"
    ]
   }
  ],
