--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -15,13 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.utils import shuffle\n",
-    "from sklearn import preprocessing\n",
+    "#\n",
     "\n",
     "% matplotlib inline"
    ]
@@ -52,8 +46,8 @@
    "source": [
     "df = pd.read_csv('./bank-additional/bank-additional-full.csv',delimiter=';')\n",
     "df = df.drop('duration',axis=1)\n",
-    "print(len(df))\n",
-    "print(list(df.columns))\n",
+    "print(\"Size of dataset - \",len(df))\n",
+    "print(\" Columns - \", list(df.columns))\n",
     "#encoding y\n",
     "df['y'] = df['y'].map({'yes':1,'no':0})"
    ]
@@ -252,6 +246,7 @@
     "null_cols = []\n",
     "for column in binary+categorical+hierarchy:\n",
     "    missing_count = len(df.loc[df[column] == 'unknown']['y'])\n",
+    "    print (\"Null Values - \\n\")\n",
     "    #Delete few unknowns\n",
     "    if missing_count < 500:\n",
     "        print (column, \" - \", missing_count)\n",
@@ -259,7 +254,7 @@
     "    elif missing_count > 500:\n",
     "        #Find which columns have still retained unkowns\n",
     "        number = missing_count\n",
-    "        print(\"Column {} - still contains {} unknowns\".format(column,number))\n",
+    "        print(\"{} - {}\".format(column,number))\n",
     "        #Turn them into np.nan\n",
     "#         df.loc[df[column] == 'unknown',column] = np.nan\n",
     "        null_cols.append(column)"
@@ -414,7 +409,7 @@
     }
    ],
    "source": [
-    "print (\"Null Values - \")\n",
+    "print (\"Null Values in numerical columns - \")\n",
     "for column in numeric:\n",
     "    null = sum(df[column].isnull())\n",
     "    print (\" {} - {}\".format(column, str(null)))\n",
