--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -72,6 +72,7 @@
        "      <th>cons.conf.idx</th>\n",
        "      <th>euribor3m</th>\n",
        "      <th>nr.employed</th>\n",
+       "      <th>y</th>\n",
        "      <th>pdayscat</th>\n",
        "      <th>campcat</th>\n",
        "      <th>poutcome_failure</th>\n",
@@ -129,6 +130,7 @@
        "      <td>0.957379</td>\n",
        "      <td>0.859735</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -182,6 +184,7 @@
        "      <td>0.60251</td>\n",
        "      <td>0.957379</td>\n",
        "      <td>0.859735</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -237,6 +240,7 @@
        "      <td>0.957379</td>\n",
        "      <td>0.859735</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -291,6 +295,7 @@
        "      <td>0.957379</td>\n",
        "      <td>0.859735</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -344,6 +349,7 @@
        "      <td>0.60251</td>\n",
        "      <td>0.957379</td>\n",
        "      <td>0.859735</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -401,64 +407,71 @@
        "3       0.0        0.9375        0.698753        0.60251   0.957379   \n",
        "4       0.0        0.9375        0.698753        0.60251   0.957379   \n",
        "\n",
-       "   nr.employed  pdayscat  campcat  poutcome_failure  poutcome_nonexistent  \\\n",
-       "0     0.859735       0.0      1.0               0.0                   1.0   \n",
-       "1     0.859735       0.0      1.0               0.0                   1.0   \n",
-       "2     0.859735       0.0      1.0               0.0                   1.0   \n",
-       "3     0.859735       0.0      1.0               0.0                   1.0   \n",
-       "4     0.859735       0.0      1.0               0.0                   1.0   \n",
+       "   nr.employed    y  pdayscat  campcat  poutcome_failure  \\\n",
+       "0     0.859735  0.0       0.0      1.0               0.0   \n",
+       "1     0.859735  0.0       0.0      1.0               0.0   \n",
+       "2     0.859735  0.0       0.0      1.0               0.0   \n",
+       "3     0.859735  0.0       0.0      1.0               0.0   \n",
+       "4     0.859735  0.0       0.0      1.0               0.0   \n",
        "\n",
-       "   poutcome_success  job_admin.  job_blue-collar  job_entrepreneur  \\\n",
-       "0               0.0         0.0              0.0               0.0   \n",
-       "1               0.0         0.0              0.0               0.0   \n",
-       "2               0.0         1.0              0.0               0.0   \n",
-       "3               0.0         0.0              0.0               0.0   \n",
-       "4               0.0         1.0              0.0               0.0   \n",
+       "   poutcome_nonexistent  poutcome_success  job_admin.  job_blue-collar  \\\n",
+       "0                   1.0               0.0         0.0              0.0   \n",
+       "1                   1.0               0.0         0.0              0.0   \n",
+       "2                   1.0               0.0         1.0              0.0   \n",
+       "3                   1.0               0.0         0.0              0.0   \n",
+       "4                   1.0               0.0         1.0              0.0   \n",
        "\n",
-       "   job_housemaid  job_management  job_retired  job_self-employed  \\\n",
-       "0            1.0             0.0          0.0                0.0   \n",
-       "1            0.0             0.0          0.0                0.0   \n",
-       "2            0.0             0.0          0.0                0.0   \n",
-       "3            0.0             0.0          0.0                0.0   \n",
-       "4            0.0             0.0          0.0                0.0   \n",
+       "   job_entrepreneur  job_housemaid  job_management  job_retired  \\\n",
+       "0               0.0            1.0             0.0          0.0   \n",
+       "1               0.0            0.0             0.0          0.0   \n",
+       "2               0.0            0.0             0.0          0.0   \n",
+       "3               0.0            0.0             0.0          0.0   \n",
+       "4               0.0            0.0             0.0          0.0   \n",
        "\n",
-       "   job_services  job_student  job_technician  job_unemployed  \\\n",
-       "0           0.0          0.0             0.0             0.0   \n",
-       "1           1.0          0.0             0.0             0.0   \n",
-       "2           0.0          0.0             0.0             0.0   \n",
-       "3           1.0          0.0             0.0             0.0   \n",
-       "4           0.0          0.0             0.0             0.0   \n",
+       "   job_self-employed  job_services  job_student  job_technician  \\\n",
+       "0                0.0           0.0          0.0             0.0   \n",
+       "1                0.0           1.0          0.0             0.0   \n",
+       "2                0.0           0.0          0.0             0.0   \n",
+       "3                0.0           1.0          0.0             0.0   \n",
+       "4                0.0           0.0          0.0             0.0   \n",
        "\n",
-       "   marital_divorced  marital_married  marital_single  month_apr  month_aug  \\\n",
-       "0               0.0              1.0             0.0        0.0        0.0   \n",
-       "1               0.0              1.0             0.0        0.0        0.0   \n",
-       "2               0.0              1.0             0.0        0.0        0.0   \n",
-       "3               0.0              1.0             0.0        0.0        0.0   \n",
-       "4               0.0              1.0             0.0        0.0        0.0   \n",
+       "   job_unemployed  marital_divorced  marital_married  marital_single  \\\n",
+       "0             0.0               0.0              1.0             0.0   \n",
+       "1             0.0               0.0              1.0             0.0   \n",
+       "2             0.0               0.0              1.0             0.0   \n",
+       "3             0.0               0.0              1.0             0.0   \n",
+       "4             0.0               0.0              1.0             0.0   \n",
        "\n",
-       "   month_dec  month_jul  month_jun  month_mar  month_may  month_nov  \\\n",
-       "0        0.0        0.0        0.0        0.0        1.0        0.0   \n",
-       "1        0.0        0.0        0.0        0.0        1.0        0.0   \n",
-       "2        0.0        0.0        0.0        0.0        1.0        0.0   \n",
-       "3        0.0        0.0        0.0        0.0        1.0        0.0   \n",
-       "4        0.0        0.0        0.0        0.0        1.0        0.0   \n",
+       "   month_apr  month_aug  month_dec  month_jul  month_jun  month_mar  \\\n",
+       "0        0.0        0.0        0.0        0.0        0.0        0.0   \n",
+       "1        0.0        0.0        0.0        0.0        0.0        0.0   \n",
+       "2        0.0        0.0        0.0        0.0        0.0        0.0   \n",
+       "3        0.0        0.0        0.0        0.0        0.0        0.0   \n",
+       "4        0.0        0.0        0.0        0.0        0.0        0.0   \n",
        "\n",
-       "   month_oct  month_sep  day_of_week_fri  day_of_week_mon  day_of_week_thu  \\\n",
-       "0        0.0        0.0              0.0              1.0              0.0   \n",
-       "1        0.0        0.0              0.0              1.0              0.0   \n",
-       "2        0.0        0.0              0.0              1.0              0.0   \n",
-       "3        0.0        0.0              0.0              1.0              0.0   \n",
-       "4        0.0        0.0              0.0              1.0              0.0   \n",
+       "   month_may  month_nov  month_oct  month_sep  day_of_week_fri  \\\n",
+       "0        1.0        0.0        0.0        0.0              0.0   \n",
+       "1        1.0        0.0        0.0        0.0              0.0   \n",
+       "2        1.0        0.0        0.0        0.0              0.0   \n",
+       "3        1.0        0.0        0.0        0.0              0.0   \n",
+       "4        1.0        0.0        0.0        0.0              0.0   \n",
        "\n",
-       "   day_of_week_tue  day_of_week_wed  agecat_adult  agecat_senior  agecat_young  \n",
-       "0              0.0              0.0           1.0            0.0           0.0  \n",
-       "1              0.0              0.0           1.0            0.0           0.0  \n",
-       "2              0.0              0.0           1.0            0.0           0.0  \n",
-       "3              0.0              0.0           1.0            0.0           0.0  \n",
-       "4              0.0              0.0           1.0            0.0           0.0  "
+       "   day_of_week_mon  day_of_week_thu  day_of_week_tue  day_of_week_wed  \\\n",
+       "0              1.0              0.0              0.0              0.0   \n",
+       "1              1.0              0.0              0.0              0.0   \n",
+       "2              1.0              0.0              0.0              0.0   \n",
+       "3              1.0              0.0              0.0              0.0   \n",
+       "4              1.0              0.0              0.0              0.0   \n",
+       "\n",
+       "   agecat_adult  agecat_senior  agecat_young  \n",
+       "0           1.0            0.0           0.0  \n",
+       "1           1.0            0.0           0.0  \n",
+       "2           1.0            0.0           0.0  \n",
+       "3           1.0            0.0           0.0  \n",
+       "4           1.0            0.0           0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -501,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -516,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -807,41 +820,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "lmplot() got an unexpected keyword argument 'color'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-89391f7dab1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumeric\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0mfig\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFacetGrid\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mhue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'y'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlmplot\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnumeric\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mnumeric\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfit_reg\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mC:\\Users\\Nachiket\\Anaconda3\\lib\\site-packages\\seaborn\\axisgrid.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, *args, **kwargs)\u001b[0m\n\u001b[1;32m    726\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    727\u001b[0m             \u001b[1;31m# Draw the plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 728\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_facet_plot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplot_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    729\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    730\u001b[0m         \u001b[1;31m# Finalize the annotations and layout\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\Nachiket\\Anaconda3\\lib\\site-packages\\seaborn\\axisgrid.py\u001b[0m in \u001b[0;36m_facet_plot\u001b[0;34m(self, func, ax, plot_args, plot_kwargs)\u001b[0m\n\u001b[1;32m    810\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    811\u001b[0m         \u001b[1;31m# Draw the plot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 812\u001b[0;31m         \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mplot_args\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mplot_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    813\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m         \u001b[1;31m# Sort out the supporting information\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: lmplot() got an unexpected keyword argument 'color'"
-     ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAANAAAADQCAYAAAB2pO90AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACRFJREFUeJzt3UuoXIUdx/HvhFiuJakYtNaVCupfF1poa2OTqtWqCx9g\nlRR8LLTWB6JUGxBXdeOiLamitJVEkSyKlBbrxopFkIqvQnXjg/iH6K7gA1+1NRqNt4szoXOHOI/7\nn3PnxHw/kMXMmZz5wT2/OefMOcy/t7i4iKTlWTXvANL+zAJJBRZIKrBAUoEFkgoskFQwUYEiYn1E\n/H0fz18YEf+MiOci4pqZp5M6bmyBIuJW4H5gYej5g4C7gHOBM4BrI+KINkJKXTXJHug14OJ9PH8i\nsDMz38vM3cDTwOmzDCd13epxL8jMhyLi6H0s+hrwwcDjD4FDxq1vcXFxsdfrTRxQWkFTb5hjCzTC\nv4G1A4/XAu+P+0+9Xo+33/6w8LZ1hx++du4ZupLDDEtzTKtSoB3AcRGxDvgPzeHblsL6pP3O1AWK\niMuANZm5LSJ+DvyN5lzqgcz816wDSl3Wm8Pd2Ivz3l136ZBh3jnMsCTH1OdAXkiVCiyQVGCBpAIL\nJBVYIKnAAkkFFkgqsEBSgQWSCiyQVGCBpAILJBVYIKnAAkkFFkgqsEBSgQWSCiyQVGCBpAILJBVY\nIKnAAkkFFkgqsEBSgQWSCiyQVGCBpIKxPy4fEauA3wPfBD4BfpqZOweWXw5sBvbQ/MD8vS1llTpn\nkj3QRcBCZn4PuA34zdDyLcDZwEZgc0QcOtuIUndNUqDvA48BZOY/gO8MLX+RZjLdAs2ErxUf9yDN\nyyTzgYZHOe6JiNWZ+Vn/8cvAC8B/gb9k5tgpdcuZBDZrXcgA3chhhuWbpEDDoxxX7S1PRJwMnA8c\nQzOl7g8RsSkz/zxqhfOeBdOheTRzz2GGpTmmNckh3DPAeQARcSrw0sCyD4BdwK7M3AO8BXgOpAPG\nJHugh4FzIuJZmnOcq4bGPG4Fno6I3cBrwPbW0kod44jHAzyHGZbkcMSjtJIskFRggaQCCyQVWCCp\nwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJ\nBRZIKrBAUoEFkgoskFRggaSCWYx4PAW4k+aH598ArsjMj9uJK3VLacRjRPSA+4CrMnPvJLuj2ggq\ndVF1xOPxwDvALRHxJLAuM3PmKaWOqo54PAzYANwI7AQeiYjnM/OJUSvswji/LmSAbuQww/KVRjzS\n7H12ZuYOgIh4jGYPNbJA854F06F5NHPPYYalOaZVHfH4OrAmIo7tPz4NeGXqFNJ+ahYjHq8GHux/\nofBsZv61xbxSp4wtUGZ+Dlw/9PSrA8ufAL4741zSfsELqVKBBZIKLJBUYIGkAgskFVggqcACSQUW\nSCqwQFKBBZIKLJBUYIGkAgskFVggqcACSQUWSCqwQFKBBZIKLJBUYIGkAgskFVggqcACSQUWSCqw\nQFKBBZIKLJBUUB7xOPC6bcC7mXnbzFNKHVUa8bhXRFwHnDTjbFLnVUc8EhEbgPXA1pmnkzquNOIx\nIo4Ebgd+BPx40jftwji/LmSAbuQww/JVRzxuopmT+ijwDeCrEfFqZm4ftcJ5j/Pr0kjBeecww9Ic\n05qkQM8AFwJ/Gh7xmJn3APcARMSVwAnjyiN9mZRHPLaaTuq48ojHgddtn1Emab/hhVSpwAJJBRZI\nKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJBRZIKrBA\nUoEFkgoskFRggaQCCyQVWCCpwAJJBRZIKiiPeIyIS4Gbgc9oJjfc0P89belLrzTiMSIOBu4AzszM\njcAhwAVtBJW6qDri8RNgQ2Z+1H+8Gvh4pgmlDiuNeOwfqr0JEBE3AWuAx8etsAvj/LqQAbqRwwzL\nVx3xuPcc6dfA8cAlmbk4boXzHufXpZGC885hhqU5pjXJIdwzwHkAwyMe+7YCC8BFA4dy0gGhNOIR\neB64GngKeCIiAO7OzIdbyit1yixGPHotSQcsN36pwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCp\nwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJBRZIKrBAUoEFkgoskFRggaQCCyQVWCCpwAJJ\nBRZIKpjFiMcLgV/QjHh8IDPvaymr1DnVEY8HAXcB5wJnANdGxBFtBJW6qDri8URgZ2a+l5m7gaeB\n02eeUuqo0ojHfSz7kGbQ8Ci9Lozz60IG6EYOMyzfJHugUSMeh5etBd6fUTap86ojHncAx0XEuoj4\nCs3h23MzTyl1VG9xcfRM4IFv4U6mP+IR+BawJjO3DXwLt4rmW7jftRtZ6o6xBZL0xbyQKhVYIKnA\nAkkFk1wHWpYu3AI0QYZLgZv7GV4CbsjMz1cyw8DrtgHvZuZts3z/STJExCnAnTRfEr0BXJGZH88h\nx+XAZmAPzTZx76wzDLzXeuBXmfmDoeen2i7b3AN14RagURkOBu4AzszMjTQXgC9YyQwDWa4DTmrh\nvcdmiIgecB9wVWbuvevkqJXO0bcFOBvYCGyOiEPbCBERtwL3AwtDz0+9XbZZoC7cAjQqwyfAhsz8\nqP94NTDzT90xGYiIDcB6YGsL7z1JhuOBd4BbIuJJYF1m5hxyALxI80G2QLM3bOsr4teAi/fx/NTb\nZZsF2uctQF+wbJJbgGaaITM/z8w3ASLiJmAN8PhKZoiII4HbgRtbeN+JMgCHARuA39J8+v8wIs6a\nQw6Al4EXgFeARzKzlbtaMvMh4NMJ8o3dLtssUBduARqVgYhYFRFbgHOASzKzjU+8URk20WzAj9Ic\n0lwWEVeucIZ3aD51d2TmpzR7iOE9Q+s5IuJk4HzgGOBo4OsRsamlHJPmG7tdtlmgLtwCNCoDNIdN\nC8BFA4dyK5YhM+/JzG/3T2R/CTyYmdtXMgPwOrAmIo7tPz6NZg/QhlE5PgB2Absycw/wFtDKOdAI\nU2+Xrd2J0IVbgEZlAJ7v/3uK/x9r352ZD69UhszcNvC6K4ETWv4W7ov+FmfRFLgHPJuZP5t1hglz\nXA/8BNhNc55yTf9cpI0sRwN/zMxTI+IylrldeiuPVOCFVKnAAkkFFkgqsEBSgQWSCiyQVGCBpIL/\nAd7Hga4yzxU4AAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0xa858358>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "numeric = numeric1 + numeric2\n",
-    "for i in range(len(numeric)):\n",
-    "    for j in range(i,len(numeric)):\n",
-    "        fig = sns.FacetGrid(df,hue='y')\n",
-    "        fig.map(sns.lmplot,x = numeric[i],y= numeric[j],fit_reg=False)"
+    "# numeric = numeric1 + numeric2\n",
+    "# for i in range(len(numeric)):\n",
+    "#     for j in range(i,len(numeric)):\n",
+    "#         sns.lmplot()\n",
+    "#         fig = sns.FacetGrid(df,hue='y')\n",
+    "#         fig.map(sns.lmplot,x = numeric[i],y= numeric[j],fit_reg=False)"
    ]
   },
   {
