--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -15,7 +15,17 @@
    },
    "outputs": [],
    "source": [
-    "#\n",
+    "# Import Packages\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "#Just to suppress some warnings about copying data on a slice of a dataframe\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "% matplotlib inline"
    ]
